-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.390 2009-01-12 19:19:22 jluis Exp $
-----------------------------------------------------------------------------------------
2009-01-12	jluis
	* gmt_plot.c:		Example 8 was crashing with Intel compiled binaries because the
				fno variale in GMT_epsinfo was declared to 5 elements but in cases
				like example08 a fno[5] adress is inquired.

2009-01-12	remko
	* grdview.c:		Made outline part of paint_it(). Significantly shortens PS file
				when plotting mesh.
	* pslib.[ch]:		Significantly simplified the PostScript specification of symbols.
				ps_setfill introduced to set symbol fill and outline.
	* gmt_plot.c:		---"---

2009-01-11	pwessel
	* gmt_custom_symbols.conf:	Removed the standard symbols from this list but kept
				the actual custom *.def files for backwards compatibility.

2009-01-11	remko
	* gmt_custom_symbols.conf:	Replaced all "Like -S.. but fillable with pattern" by
				"Same as -S..", since all these symbols are already fillable
	* PSL_prologue.ps:	New implementation of cross (was actually a plus). Introduced
				plus sign. Both are positioned now on the center of the symbol.
	* pslib.[ch]:		Renamed ps_cross to ps_plus. Implemented new ps_cross.
	* gmt_plot.[ch]:	Renamed GMT_cross to GMT_plus. Implemented new GMT_cross.
	* {psxy,psxyz}.{c,txt}:	-Sx now makes a cross (x) not a plus (+). -S+ makes a plus (+).
	* gmt_init.c:		---"---
	* gmt_support.c:	---"---
	* gmt_symbol.h:		---"---
	* *.txt:		Consistent use of OPT(x)

2009-01-10	remko
	* pslib.c, PSL_prologue.ps:	New implementation of code for ellipse (provides
				constant pen width). Changed code for circle and
				pie wedge (made similar to other symbols).
	* pslib.[ch], gmt_plot.c:	Removed OLD_TEXTDIM code (obsolete after change of 2008-12-20).

2009-01-09	pwessel
	* surface.c:		Abort with message if nx or ny is < 4.
	
2009-01-09	jluis